# python-actions

./: .dccache  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-lint.yml  python-test.yml
python_actions/: add.py  helloworld.py  subtract.py  unformatted.py
tests/: test_add.py  test_sub.py
