[tool.poetry]
name = "python-actions"
version = "0.1.0"
description = "A demo python project with GitHub CI/CD Actions for formatting and testing code"
authors = ["Robert Alexander <gogonegro@gmail.com>"]
readme = "README.md"
packages = [{include = "python_actions"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pylint = "^2.15.10"
autopep8 = "^2.0.1"
isort = "^5.11.4"
flake8 = "^6.0.0"
reorder-python-imports = "^3.9.0"
add-trailing-comma = "^2.4.0"
mypy = "^0.991"
pydantic = "^1.10.4"
setup-cfg-fmt = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
